updated experience and classes section

--- a/index.css
+++ b/index.css
@@ -340,6 +340,18 @@ th, td {
 	color: #C26868;
 }
 
+#class13:hover, #class13-desc p {
+	color: #C26868;
+}
+
+#class14:hover, #class14-desc p {
+	color: #C26868;
+}
+
+#class15:hover, #class15-desc p {
+	color: #C26868;
+}
+
 .class-x {
 	background-color: honeydew;
 }
